# asgard

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  JenkinsfileBuildAppImage  JenkinsfileBuildDataImage  JenkinsfileDeployApp  Makefile  README.md  conf.h.cmake  config.cpp.cmake
.githooks/: pre-commit
.github/workflows/: workflow.yml
.jenkins/: JenkinsfileBuildAppImage  JenkinsfileBuildDataImage  JenkinsfileBuildDepsImage
asgard/: CMakeLists.txt  asgard.cpp  asgard_conf.h  context.h  direct_path_response_builder.cpp  direct_path_response_builder.h  handler.cpp  handler.h  metrics.cpp  metrics.h  mode_costing.cpp  mode_costing.h  projector.cpp  projector.h  util.cpp  util.h
asgard/tests/: CMakeLists.txt  benchmark_projector_cache.cpp  direct_path_response_builder_test.cpp  handle_matrix_test.cpp  handler_test.cpp  projector_test.cpp  tile_maker.cpp  tile_maker.h  util_test.cpp
cmake_modules/: FindValhalla.cmake  LoadConfig.cmake  SanitizerOptions.cmake  ThirdParty.cmake  UseBoost.cmake
docker/asgard-app/: Dockerfile
docker/asgard-build-deps/: Dockerfile  Dockerfile.orig
docker/asgard-data/: Dockerfile
docker/asgard-dev/: Dockerfile
docker/asgard-prod/: Dockerfile
scripts/: build_asgard_for_ubuntu.sh  check-formatting.py  check-formatting.sh  clang-format.sh  create_asgard_data.sh  find_clang_format.sh  remove_asgard_and_dangling_images.sh
